--- a/styles/user.less
+++ b/styles/user.less
@@ -1,7 +1,7 @@
 user{
   width: 300px;
   border: solid 1px #ccc;
-  display: inline-block;
+  display: block;
   padding: 5px 5px 8px 5px;
   background: #eee;
   position: relative;
