user is only saved as necessary, current user is a firebaseObject ref, updated readme

--- a/styles/user.less
+++ b/styles/user.less
@@ -8,6 +8,7 @@ user{
   -webkit-user-select: none;  /* Chrome all / Safari all */
   -moz-user-select: none;     /* Firefox all */
   -ms-user-select: none;      /* IE 10+ */
+  margin: 0 0 2px 0;
 }
 user > span{
   display: inline-block;
