dyanmic rootObjective and sub objectives

--- a/styles/position.less
+++ b/styles/position.less
@@ -6,10 +6,10 @@
   float: right;
 }
 
-.clear, sub-objectives{
+.clear, child-objectives{
   clear: both;
 }
 
-.block, sub-objectives{
+.block, child-objectives{
   display: block;
 }
