--- a/app/Objectives/directives/objective/objectives.less
+++ b/app/Objectives/directives/objective/objectives.less
@@ -1,7 +1,35 @@
+objectives{
+    &:hover{
+        objective{
+            &:not(:hover){
+                border: solid 1px #ccc;
+                color: #333;
+                background: #eee;
+
+                name {
+                    input {
+                        color: black;
+                    }
+                }
+            }
+        }
+    }
+}
+
 main-objective{
     z-index: 1;
     position: relative;
+
+
 }
+
+parent-objectives{
+    objective{
+        padding: 0 0 2px 0;
+        margin: 0 0 2px 0;
+    }
+}
+
 objective{
     display: block;
     border: solid 1px #ccc;
@@ -9,41 +37,63 @@ objective{
     color: #333;
     background: #eee;
     position: relative;
-}
-objective input{
-    outline: none;
-    border: 0;
-    background: transparent;
-    text-align: center;
-    font-size: 20px;
-    width: 100%;
-}
-objective.collapsed{
-    margin: 2px 0 0 2px;
-    height: 40px;
-    line-height: 40px;
-    float: right;
-    width: 40px;
-}
-objective.expanded{
-    height: 120px;
-    line-height: 115px;
-    font-weight: bold;
-    font-size: 1.5em;
-    width: 200px;
-    float: right;
-}
-objective.expanded:hover>taskbar{
-    right: 220px;
-    transition: .25s;
-}
-.ghost{
-    opacity: .25;
     cursor: pointer;
-    font-weight: bold;
-}
-.ghost:hover{
-    opacity: 1;
+    transition: background .25s, color .25s, border .25s;
+
+    &:hover{
+        background: #1679bc;
+        color: white;
+        border: solid 1px #0b4574;
+
+        name {
+            input {
+                color: white;
+            }
+        }
+    }
+
+    &.expanded{
+        height: 220px;
+        line-height: 115px;
+        font-weight: bold;
+        font-size: 1.5em;
+        width: 300px;
+        float: right;
+        background: #1679bc;
+        color: white;
+        border: solid 1px #0b4574;
+
+        name {
+            input {
+                transition: color .25s;
+                color: white;
+            }
+        }
+
+        &:hover{
+            &>taskbar{
+                right: 220px;
+                transition: .25s;
+            }
+        }
+    }
+
+    &.collapsed{
+        margin: 2px 0 0 2px;
+        height: 40px;
+        line-height: 40px;
+        float: right;
+        width: 40px;
+    }
+
+    input{
+        outline: none;
+        border: 0;
+        background: transparent;
+        text-align: center;
+        font-size: 20px;
+        width: 100%;
+    }
 }
 
 taskbar{
@@ -58,21 +108,23 @@ taskbar{
     text-align: right;
     transition: .25s;
     transition-delay: 1s;
-}
-task{
-    display: block;
-    margin: 0 0 0 20px;
-    cursor: pointer;
-}
-task:after{
-    border: solid 1px #ccc;
-    width: 10px;
-    height: 11px;
-    background: white;
-    line-height: 9px;
-    content:'';
-    display: inline-block;
-    position: absolute;
-    margin: 1px 4px 0 3px;
-    padding-left: 1px;
+
+    task{
+        display: block;
+        margin: 0 0 0 20px;
+        cursor: pointer;
+
+        &:after{
+            border: solid 1px #ccc;
+            width: 10px;
+            height: 11px;
+            background: white;
+            line-height: 9px;
+            content:'';
+            display: inline-block;
+            position: absolute;
+            margin: 1px 4px 0 3px;
+            padding-left: 1px;
+        }
+    }
 }
