--- a/styles/body.less
+++ b/styles/body.less
@@ -3,3 +3,15 @@ body{
   -moz-user-select: none;     /* Firefox all */
   -ms-user-select: none;      /* IE 10+ */
 }
+
+.ghost{
+  opacity: .25;
+  cursor: pointer;
+  font-weight: bold;
+  transition: .25s;
+}
+
+.ghost:hover{
+  opacity: 1;
+  transition: .25s;
+}
