sup and parent objective animation

--- a/app/global/directives/progressBar/progressBar.less
+++ b/app/global/directives/progressBar/progressBar.less
@@ -5,18 +5,23 @@ progressbar{
   height: 3px;
   left: 0;
   width: 100%;
-}
 
-progress-background{
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  background: black;
-  opacity: .1;
-}
+  progress-background{
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background: black;
+    opacity: .1;
+  }
 
-progress-indicator{
-  background-color: forestgreen;
+  progress-indicator{
+    background-color: #2dba2d;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    transition: .25s;
+  }
 }
