--- a/app/objectives/directives/objective/objectives.less
+++ b/app/objectives/directives/objective/objectives.less
@@ -124,6 +124,10 @@ objective{
         tool{
             position: relative;
 
+            input{
+                padding: 0 0 0 0 !important;
+            }
+
             &:hover:not(.right)::after{
                 content: attr(tooltip);
                 font-size: .8em;
