--- a/app/tasks/directives/task/task.less
+++ b/app/tasks/directives/task/task.less
@@ -8,17 +8,14 @@ taskbar{
 
   task{
     display: block;
-    margin: 0 0 0 3px;
+    margin: 0 0 3px 3px;
     cursor: pointer;
 
-    i{
-      margin: 0 4px 0 0;
+    check{
+      margin: 0 0 0 0;
 
-      &.fa-check-circle-o{
-        color: #68D68B;
-      }
-      &.fa-circle-o{
-        color: #4D84DA;
+      img{
+        vertical-align: sub;
       }
     }
   }
