task prioritization, some color clean up

--- a/app/objectives/directives/objective/objectives.less
+++ b/app/objectives/directives/objective/objectives.less
@@ -2,13 +2,13 @@ objectives{
     &:hover{
         objective{
             &:not(:hover){
-                border: solid 1px #ccc;
-                color: #333;
-                background: #eee;
+                //border: solid 1px #ccc;
+                //color: #333;
+                //background: #eee;
 
                 name {
                     input {
-                        color: black;
+                        //color: black;
                     }
                 }
             }
@@ -33,7 +33,7 @@ objective{
     transition: background .25s, color .25s, border .25s;
 
     &:hover{
-        background: #1679bc;
+        background: #3f7fbc;
         color: white;
         border: solid 1px #0b4574;
 
@@ -56,7 +56,7 @@ objective{
         font-size: 1.5em;
         width: 304px;
         float: right;
-        background: #1679bc;
+        background: #3f7fbc;
         color: white;
         border: solid 1px #0b4574;
 
