--- a/app/tasks/directives/task/task.less
+++ b/app/tasks/directives/task/task.less
@@ -4,15 +4,16 @@ taskbar{
   line-height: normal;
   display: block;
   text-align: left;
-  margin: 3px 0 0 0;
+  margin: 8px 0 0 5px;
 
   task{
     display: block;
-    margin: 0 0 3px 3px;
+    margin: 0 0 5px 3px;
     cursor: pointer;
+    position: relative;
 
     check{
-      margin: 0 0 0 0;
+      margin: 0 2px 0 0;
 
       img{
         vertical-align: sub;
