--- a/styles/position.less
+++ b/styles/position.less
@@ -6,6 +6,10 @@
   float: right;
 }
 
+new-member-welcome, existing-member-welcome{
+  text-align: center;
+}
+
 .clear, child-objectives{
   clear: both;
 }
