Modified task/sub-objective view

--- a/app/global/directives/messageOverlay/messageOverlay.less
+++ b/app/global/directives/messageOverlay/messageOverlay.less
@@ -14,17 +14,17 @@ message-overlay{
     margin-top: 15px;
 
     &:first-of-type{
-      background: #87a585;
+      background: #4974B7;
       border: solid 1px #377d30;
       color: white;
-      margin-right: 25px;
+      margin-right: 10px;
     }
 
     &:last-child{
-      background: #a37876;
+      background: #C74D48;
       border: solid 1px #7d2e2f;
       color: white;
-      margin-left: 25px;
+      margin-left: 10px;
     }
   }
 }
