--- a/app/global/directives/taskInfoPanel/taskInfoPanel.less
+++ b/app/global/directives/taskInfoPanel/taskInfoPanel.less
@@ -80,7 +80,7 @@ task-info-panel{
         margin-right: 2px;
       }
       &:first-child{
-        background: rgb(104, 137, 165);
+        background: #3B8BD0;
         border: solid 1px #3a5d7d;
         color: white;
       }
@@ -89,7 +89,7 @@ task-info-panel{
         border: solid 1px #989492;
       }
       &:last-child{
-        background: rgb(163, 120, 118);
+        background: #BD514B;
         border: solid 1px #7d2e2f;
         color: white;
       }
