--- a/app/objectives/directives/objective/objectives.less
+++ b/app/objectives/directives/objective/objectives.less
@@ -1,30 +1,12 @@
-objectives{
-    &:hover{
-        objective{
-            &:not(:hover){
-                //border: solid 1px #ccc;
-                //color: #333;
-                //background: #eee;
-
-                name {
-                    input {
-                        //color: black;
-                    }
-                }
-            }
-        }
-    }
-}
 parent-objectives{
     objective{
-        padding: 0 0 2px 0;
+        padding: 2px 2px 4px 4px;
         margin: 0 0 2px 0;
     }
 }
 objective{
     display: block;
     border: solid 1px #ccc;
-    text-align: center;
     color: #333;
     background: #eee;
     position: relative;
@@ -120,37 +102,84 @@ objective{
     }
 
     &.expanded{
-        height: 220px;
+        min-height: 220px;
         line-height: 27px;
         font-weight: bold;
         font-size: 1.5em;
-        width: 354px;
+        width: 600px;
         float: right;
         background: #3f7fbc;
         color: white;
         border: solid 1px #0b4574;
 
         name {
-            input {
-                transition: color .25s;
-                color: white;
-            }
+            padding: 10px;
+            display: block;
         }
 
         &:hover{
-            &>taskbar{
-                right: 220px;
-                transition: .25s;
+            .mini{
+                &:last-child{
+
+                }
+            }
+        }
+
+        add-task-button{
+            display: inline-block;
+            position: relative;
+            width: 27px;
+            margin-top: 3px;
+            margin-bottom: 20px;
+            height: 14px;
+            plus{
+                width: 16px;
+                height: 16px;
+                text-align: center;
+                color: black;
+                font-size: .8em;
+                font-weight: normal;
+                line-height: .9em;
+                background:#ccc;
+                border: #aaa;
+                display: inline-block;
+                border-radius: 30px;
+                margin: 0 0 10px 8px;
+                &:hover{
+                    box-shadow: 0px 0px 12px -3px #000000;
+                }
             }
         }
     }
 
     &.mini{
-        margin: 2px 0 0 2px;
-        height: 40px;
-        line-height: 40px;
-        float: right;
-        width: 40px;
+        margin: 5px 5px 0 5px;
+        padding: 0 0 0 5px;
+        height: 30px;
+        text-align: left;
+        font-size: 12pt;
+        line-height: 26px;
+
+        &:hover{
+            background: #e3e3e3;
+            color: black;
+            border: solid 1px #ddd;
+            box-shadow: 0px 0px 12px -3px #000000;
+        }
+
+        &:last-child{
+            margin-top: 5px;
+            margin-bottom: 8px;
+            height: 30px;
+            width: 30px;
+            padding: 0;
+            line-height: 30px;
+            text-align: center;
+            visibility: visible;
+            overflow: visible;
+            border: solid 1px #ddd;
+            font-size: 1em;
+        }
     }
 
     input{
@@ -162,8 +191,6 @@ objective{
         width: 100%;
         padding: 0 0 0 5px;
     }
-
-
 }
 
 
