overflow for task description

--- a/app/global/directives/taskInfoPanel/taskInfoPanel.less
+++ b/app/global/directives/taskInfoPanel/taskInfoPanel.less
@@ -35,6 +35,7 @@ task-info-panel{
   description{
     border: solid 1px #ccc;
     display: block;
+    overflow: scroll;
     position: absolute;
     background: white;
     top: 33px;
