--- a/app/global/directives/taskInfoPanel/taskInfoPanel.less
+++ b/app/global/directives/taskInfoPanel/taskInfoPanel.less
@@ -62,6 +62,7 @@ task-info-panel{
     background: white;
     left: 60px;
     bottom: 8px;
+    text-align: center;
   }
 
   toolbar{
@@ -109,6 +110,8 @@ task-info-panel{
     name{
       outline: 0;
       border: 0;
+      display: inline-block !important;
+      padding: 0 !important;
     }
   }
 }
