--- a/app/global/directives/taskInfoPanel/taskInfoPanel.less
+++ b/app/global/directives/taskInfoPanel/taskInfoPanel.less
@@ -11,6 +11,8 @@ task-info-panel{
   left: 0;
   right: 0;
   bottom: 0;
+  min-height: 300px;
+  max-height: 600px;
 
   message-overlay{
     font-size: .7em;
