--- a/styles/body.less
+++ b/styles/body.less
@@ -15,3 +15,10 @@ body{
   opacity: 1;
   transition: .25s;
 }
+
+message {
+  font-size: .7em;
+  display: inline-block;
+  margin-left: 7px;
+  color: #8DB2D6;
+}
