trying to implement a slide panel for re-use

--- a/app/tasks/directives/task/task.less
+++ b/app/tasks/directives/task/task.less
@@ -8,6 +8,10 @@
     &:last-child{
       margin-bottom: 0;
     }
+    
+    & .completed{
+      color: #87ABCE;
+    }
 
     check{
       margin: 0 7px 0 0;
