--- a/app/objectives/directives/objective/objective.less
+++ b/app/objectives/directives/objective/objective.less
@@ -26,11 +26,14 @@ objective{
     }
 
     header{
-        &:hover{
-            & > toolbar{
-                height: 25px;
-                transition: .25s;
-            }
+
+        tool-toggle{
+            display: inline-block;
+            float: right;
+            position: absolute;
+            top: 8px;
+            right: 12px;
+            color: #87ADD2;
         }
 
         toolbar{
@@ -101,17 +104,16 @@ objective{
         }
     }
 
-
     taskbar {
         font-size: .7em;
         font-weight: normal;
         line-height: normal;
         display: block;
         text-align: left;
-        margin: 8px 0 15px 10px;
+        margin: 8px 0 10px 10px;
     }
 
-        &.expanded{
+    &.expanded{
         min-height: 220px;
         line-height: 27px;
         font-weight: bold;
@@ -121,6 +123,7 @@ objective{
         background: #3f7fbc;
         color: white;
         border: solid 1px #0b4574;
+        margin-bottom: 20px;
 
         name {
             padding: 10px;
@@ -180,6 +183,10 @@ objective{
         font-size: 20px;
         width: 100%;
         padding: 0 0 0 5px;
+    }
+
+    slide-panel content{
+        height: 40px;
     }
 }
 
