--- a/app/objectives/directives/objective/objective.less
+++ b/app/objectives/directives/objective/objective.less
@@ -157,6 +157,58 @@ objective{
                 box-shadow: 0px 0px 12px -3px #000000;
             }
         }
+
+        objective-tools{
+            position: absolute;
+            right: 0;
+            top: 5px;
+            z-index: 10;
+            display: inline-block;
+            background: black;
+            color: white;
+            padding: 10px 0;
+            left: 300px;
+            white-space: nowrap;
+            border-radius: 5px 0 0 5px;
+            transition: .25s;
+            font-size: .7em;
+
+            &.collapsed{
+                left: 602px;
+                transition: .25s;
+            }
+
+            collapse-handle{
+                position: absolute;
+                left: 0;
+                top: 0;
+                bottom: 0;
+                width: 10px;
+                border-right: solid 1px #555;
+                cursor: pointer;
+
+                i{
+                    margin-top: 65px;
+                    margin-left: 3px;
+                    color: #888;
+                }
+            }
+
+            tool{
+                display: block;
+                padding: 10px 20px 10px 10px;
+                margin-left: 10px;
+                cursor: pointer;
+
+                &:not(:last-child){
+
+                }
+
+                &:hover{
+                    background: #555;
+                }
+            }
+        }
     }
 
     &.mini{
