Massive UI change, removed user list, added tools at the top for workspace nav and user identification, workspace navigation and creation should be working.

--- a/app/objectives/directives/objective/objective.less
+++ b/app/objectives/directives/objective/objective.less
@@ -171,10 +171,12 @@ objective{
             white-space: nowrap;
             border-radius: 5px 0 0 5px;
             transition: .25s;
+            visibility: visible;
             font-size: .7em;
 
             &.collapsed{
-                left: 602px;
+                left: 595px;
+                visibility: hidden;
                 transition: .25s;
             }
 
