--- a/app/objectives/objectives.less
+++ b/app/objectives/objectives.less
@@ -4,8 +4,8 @@ child-objectives{
 }
 
 objectives{
-  margin-right: 10px;
+  margin-left: 10px;
   display: inline-block;
-  overflow: hidden;
+  overflow: visible;
   position: relative;
 }
