--- a/styles/position.less
+++ b/styles/position.less
@@ -17,3 +17,8 @@ new-member-welcome, existing-member-welcome{
 .block, child-objectives{
   display: block;
 }
+
+centered{
+  text-align: center;
+  display: block;
+}
