--- a/styles/header.less
+++ b/styles/header.less
@@ -8,5 +8,28 @@ body{
     margin: 0 0 10px 0;
     background: black;
 
+    user-tools{
+      float: right;
+      font-size: .7em;
+      line-height: 2em;
+
+      tool{
+        padding: 14px;
+        cursor: pointer;
+        &:hover{
+          background: #333;
+          padding: 14px;
+        }
+        & > img{
+          height: 31px;
+          vertical-align: bottom;
+          margin-right: 12px;
+          border: solid 1px #7D7D7D;
+        }
+        &:last-child{
+          border-left: solid 1px #464646;
+        }
+      }
+    }
   }
 }
