small slidePanel tweak

--- a/app/global/directives/slidePanel/slidePanel.less
+++ b/app/global/directives/slidePanel/slidePanel.less
@@ -22,7 +22,7 @@ slide-panel{
     display:inline-block;
     position: absolute;
     z-index: 5;
-    right: 0;
+    right: 8px;
     top: -3px;
     bottom: 0;
     width: 30px;
