tools for objectives started, better alignment of carets for tool bars

--- a/app/objectives/directives/objective/objective.less
+++ b/app/objectives/directives/objective/objective.less
@@ -218,8 +218,8 @@ objective{
         padding: 0 0 0 5px;
         height: 30px;
         text-align: left;
-        font-size: 12pt;
-        line-height: 26px;
+        font-size: .7em;
+        line-height: 1.55em;
 
         &:hover{
             background: #e3e3e3;
