huge firebase restructure, beginning of collaboration

--- a/app/global/directives/taskInfoPanel/taskInfoPanel.less
+++ b/app/global/directives/taskInfoPanel/taskInfoPanel.less
@@ -38,7 +38,7 @@ task-info-panel{
   description{
     border: solid 1px #ccc;
     display: block;
-    overflow: scroll;
+    overflow: auto;
     position: absolute;
     background: white;
     top: 33px;
