--- a/styles/body.less
+++ b/styles/body.less
@@ -22,3 +22,32 @@ message {
   margin-left: 7px;
   color: #8DB2D6;
 }
+
+button{
+  border: solid 1px #ccc;
+  padding: 10px;
+  font-size: 1em;
+  background: white;
+  border-radius: 3px;
+
+  &.warn{
+    background: #f0ad4e;
+    border: solid 1px #eea236;
+    color: white;
+  }
+  &.success{
+    background: #5cb85c;
+    border: solid 1px #4cae4c;
+    color: white;
+  }
+  &.primary{
+    background: #337ab7;
+    border: solid 1px #2e6da4;
+    color: white;
+  }
+  &.danger{
+    background: #d9534f;
+    border: solid 1px #d43f3a;
+    color: white;
+  }
+}
