--- a/app/objectives/objectives.less
+++ b/app/objectives/objectives.less
@@ -4,7 +4,6 @@ child-objectives{
 }
 
 objectives{
-  margin-left: 10px;
   display: inline-block;
   overflow: visible;
   position: relative;
@@ -16,10 +15,11 @@ objective-list{
     border: dashed 1px #ccc;
     color: black;
     display: block;
+    font-size: 1.5em;
     font-weight: bold;
     cursor: pointer;
     margin: 0 0 5px 0;
-    padding: 20px;
+    padding: 10px;
 
     &:hover{
       border: solid 1px #304eaa;
@@ -37,14 +37,19 @@ objective-item, new-objective{
   border: solid 1px #304eaa;
   background: #3a5d7d;
   color: white;
-
   display: block;
+  font-size: 1.5em;
   font-weight: bold;
   cursor: pointer;
   margin: 0 0 5px 0;
-  padding: 20px;
-  & > div{
+  overflow: auto;
+  padding: 10px 10px 10px 130px;
 
+  button{
+    font-size: 1rem;
+    margin-left: 10px;
+    float: right;
+    width: 120px;
   }
 }
 
@@ -66,7 +71,7 @@ public-objectives{
     display: block;
     text-align: center;
     overflow: auto;
-    line-height: 2.5em;
+    font-size: 1.5em;
 
     &:first-child{
       margin-top: 20px;
@@ -82,6 +87,7 @@ public-objectives{
       margin-left: 10px;
       float: right;
       width: 120px;
+      font-size: 1rem;
     }
   }
 }
@@ -93,11 +99,10 @@ new-objective-form{
   padding: 20px;
   border: solid 1px #ccc;
   background: #eee;
-  margin: 120px 0;
+  margin: 20px 0;
 
   i{
     color: white;
-    height: 20px;
     border: solid 1px #304eaa;
     background: #5f97cb;
     padding: 15px;
