--- a/app/global/directives/taskInfoPanel/taskInfoPanel.less
+++ b/app/global/directives/taskInfoPanel/taskInfoPanel.less
@@ -80,6 +80,7 @@ task-info-panel{
       border: solid 1px #888;
       padding: 5px;
       margin: 5px 5px 5px 0;
+      font-size: 1rem;
 
       &:not(:last-child){
         margin-right: 2px;
