collaborator list is kept in sync when tree walking

--- a/app/users/collaborator/collaborator.less
+++ b/app/users/collaborator/collaborator.less
@@ -15,16 +15,19 @@ collaborators{
     overflow: auto;
 
     header{
-      height: 50px;
+      height: 40px;
     }
     button{
       float: right;
-      margin: 5px 5px 0 0;
+      margin: 8px 8px 0 0;
+      font-size: .7em;
+      padding: 5px;
+      font-weight: normal;
     }
 
     user-info{
       img{
-        width: 50px;
+        width: 40px;
         vertical-align: middle;
         margin: 0 10px 0 0;
         border-right: solid 1px #ccc;
