--- a/app/global/directives/taskInfoPanel/taskInfoPanel.less
+++ b/app/global/directives/taskInfoPanel/taskInfoPanel.less
@@ -80,24 +80,10 @@ task-info-panel{
       border: solid 1px #888;
       padding: 5px;
       margin: 5px 5px 5px 0;
-      font-size: 1rem;
+      font-size: .8rem;
 
       &:not(:last-child){
         margin-right: 2px;
-      }
-      &:first-child{
-        background: #3B8BD0;
-        border: solid 1px #3a5d7d;
-        color: white;
-      }
-      &:nth-child(2){
-        background: #cccac7;
-        border: solid 1px #989492;
-      }
-      &:last-child{
-        background: #BD514B;
-        border: solid 1px #7d2e2f;
-        color: white;
       }
     }
   }
